# rune

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml
rune/: __init__.py  tensor.py  typing.py
rune-core/: Cargo.toml  Makefile
rune-core/src/: datatype.rs  lib.rs  shape.rs  tensor.rs  utils.rs
rune-core/src/nn/: mod.rs  module.rs  parameter.rs
src/: buffer.rs  clbuffer.rs  context.rs  datatype.rs  lib.rs  rbuffer.rs  shape.rs  size.rs  tensor.rs  utils.rs
src/function/: function.rs  mod.rs
src/functions/: binary.rs  function.rs  mod.rs
